exploratory data analysis

--- a/Notebooks/Part_I_exploration_data_analysis.ipynb
+++ b/Notebooks/Part_I_exploration_data_analysis.ipynb
@@ -1526,7 +1526,7 @@
    "source": [
     "The above visualization depicts distribution different features of the dataset. There are subdivided into two main categories which are quantitative and qualitative exploration of data. To begin with quantitative, histograms were used to analysis the distribution of nominal data. BorrowerAPR and BorrowerRate seem to have the same distribution and nearly normal distribution. With histograms, I realized some columns have wrong datatype such as ProsperScore and TotalProsperLoans and I changed their type. Also, some visualization were not clear and I used different bins and adjust the limit so that the graph can be clear.Features like DelinquenciesLast7Years and StatedMonthlyIncome seems to be left-skewed. \n",
     "\n",
-    "continuing to qualitative "
+    "continuing to qualitative,I used countplot to analysis the frequency of different categories in different features of the dataset. Starting with ProsperRating (Alpha), we can see that \"C\" category outweighs others, whereby 4 is customer risk sccore with high values in the properscore columns. Borrow home owner status are quite balanced and those who are employed are the one with the most loan compared to the other employee job status. In loan status, it can be seen that people on current loan outweighs others with 49.7% followed by those"
    ]
   },
   {
