--- a/Notebooks/Part_I_exploration_data_analysis.ipynb
+++ b/Notebooks/Part_I_exploration_data_analysis.ipynb
@@ -2055,15 +2055,8 @@
    "source": [
     "> Difficulties in understanding the metadata provided. For example, I was unable to fully comprehend the meaning of abbreviations such as AA,D,C, and others in prosperRating, so I was unable to provide accurate insights.\n",
     "\n",
-    "> Not familiar with some words used in dataset "
+    "> Not familiar with some words used in dataset regarding borrowing loans"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
